# Ferric

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: clippy.yml
executable/: Cargo.toml  bf.fe  fib_recurse.fe  src.fe  src.txt
executable/src/: main.rs  src.txt
ferric/: Cargo.toml
ferric/src/: interpreter.rs  lexer.rs  lib.rs  loc.rs  macros.rs  parser.rs
playground/: .prettierignore  .prettierrc  Cargo.toml  eslint.config.mjs  global.d.ts  index.html  index.js  index.jsx  output.js  package.json  tsconfig.json  webpack.config.js
playground/site/: index.html  index.jsx  index.tsx  info.md
playground/src/: lib.rs
src/: interpreter.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  src.txt
