[package]
name = "ferric"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast-sign-loss = "allow"
cast-precision-loss = "allow"
