[workspace]
resolver = "3"
members = ["executable", "ferric", "playground"]
default-members = ["executable", "ferric"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast-sign-loss = "allow"
cast-precision-loss = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"