[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.44"
ferric = { version = "0.1.0", path = "../ferric" }
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlPreElement',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-all']

[lints]
workspace = true
